doc conversion for 2.0 contribution syntax

--- a/bundles/org.eclipse.jdt.doc.isv/plugin.xml
+++ b/bundles/org.eclipse.jdt.doc.isv/plugin.xml
@@ -13,28 +13,22 @@
 
 
 <!-- ============================================================================= -->
-<!-- Define info set, its views, and the top level topics for each view            -->
+<!-- Define primary TOC                                                            -->
 <!-- ============================================================================= -->
 
-   <extension point="org.eclipse.help.contributions">
-   	<infoset name="infoset_Guide.xml"/>
-   </extension>
-
-   <extension point="org.eclipse.help.contributions"> 
-       <topics name="topics_view_Contents.xml"/>
-       <actions name="actions_view_Contents.xml" />
+   <extension point="org.eclipse.help.toc"> 
+       <toc file="toc.xml" primary="true" />
    </extension>
 
 <!-- ============================================================================= -->
-<!-- Wire in content for contents view                                             -->
+<!-- Define TOCs                                                                   -->
 <!-- ============================================================================= -->
 
-   <extension point="org.eclipse.help.contributions"> 
-       <topics name="topics_Guide.xml" />   
-       <topics name="topics_Reference.xml" />   
-       <topics name="topics_Questions.xml" />   
-       <topics name="topics_Samples.xml" />   
-       <actions name="actions_All.xml" />
+   <extension point="org.eclipse.help.toc"> 
+       <toc file="topics_Guide.xml" />   
+       <toc file="topics_Reference.xml" />   
+       <toc file="topics_Questions.xml" />   
+       <toc file="topics_Samples.xml" />   
    </extension>
 
 </plugin>
