--- a/bundles/org.eclipse.jdt.doc.user/plugin.xml
+++ b/bundles/org.eclipse.jdt.doc.user/plugin.xml
@@ -13,29 +13,23 @@
 
 
 <!-- ============================================================================= -->
-<!-- Define info set, its views, and the top level topics for each view            -->
+<!-- Define primary TOC                                                            -->
 <!-- ============================================================================= -->
 
-   <extension point="org.eclipse.help.contributions">
-   	<infoset name="infoset_Guide.xml"/>
-   </extension>
-
-   <extension point="org.eclipse.help.contributions"> 
-       <topics name="topics_view_Contents.xml"/>
-       <actions name="actions_view_Contents.xml" />
+   <extension point="org.eclipse.help.toc"> 
+       <toc file="toc.xml" primary="true" />
    </extension>
 
 
 <!-- ============================================================================= -->
-<!-- Wire in content for contents view                                             -->
+<!-- Define TOCs                                                                   -->
 <!-- ============================================================================= -->
 
-   <extension point="org.eclipse.help.contributions"> 
-       <topics name="topics_GettingStarted.xml" />   
-       <topics name="topics_Concepts.xml" />   
-       <topics name="topics_Tasks.xml" />   
-       <topics name="topics_Reference.xml" />   
-       <actions name="actions_All.xml" />
+   <extension point="org.eclipse.help.toc">
+       <toc file="topics_GettingStarted.xml" />
+       <toc file="topics_Concepts.xml" />
+       <toc file="topics_Tasks.xml" />
+       <toc file="topics_Reference.xml" />
    </extension>
 
 
