F1 conversion to 2.0 format

--- a/bundles/org.eclipse.jdt.doc.user/plugin.xml
+++ b/bundles/org.eclipse.jdt.doc.user/plugin.xml
@@ -38,11 +38,11 @@
 <!-- ============================================================================= -->
 
 	<extension point="org.eclipse.help.contexts"> 
-		<contexts name="contexts_JDT.xml" plugin="org.eclipse.jdt.ui"/> 
+		<contexts file="contexts_JDT.xml" plugin="org.eclipse.jdt.ui"/> 
 	</extension>
 
 	<extension point="org.eclipse.help.contexts">
-		<contexts name="contexts_Debugger.xml" plugin="org.eclipse.debug.ui"/> 
+		<contexts file="contexts_Debugger.xml" plugin="org.eclipse.debug.ui"/> 
 	</extension>
 
 </plugin>
