--- a/bundles/org.eclipse.platform.doc.user/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.user/plugin.xml
@@ -36,19 +36,19 @@
 <!-- ============================================================================= -->
 
    <extension point="org.eclipse.help.contexts"> 
-       <contexts name="contexts_Workbench.xml" plugin="org.eclipse.ui"/> 
+       <contexts file="contexts_Workbench.xml" plugin="org.eclipse.ui"/> 
    </extension>
 
    <extension point="org.eclipse.help.contexts"> 
-       <contexts name="contexts_VCM.xml" plugin="org.eclipse.vcm.ui"/> 
+       <contexts file="contexts_VCM.xml" plugin="org.eclipse.vcm.ui"/> 
    </extension>
 
    <extension point="org.eclipse.help.contexts"> 
-       <contexts name="contexts_VCM_CVS.xml" plugin="org.eclipse.vcm.ui.cvs"/> 
+       <contexts file="contexts_VCM_CVS.xml" plugin="org.eclipse.vcm.ui.cvs"/> 
    </extension>
 
    <extension point="org.eclipse.help.contexts"> 
-      <contexts name="contexts_Search.xml" plugin="org.eclipse.search"/> 
+      <contexts file="contexts_Search.xml" plugin="org.eclipse.search"/> 
    </extension>
 
 
