--- a/bundles/org.eclipse.platform.doc.isv/plugin.properties
+++ b/bundles/org.eclipse.platform.doc.isv/plugin.properties
@@ -1,1 +1,2 @@
-pluginName = Platform ISV Guide
+pluginName = Eclipse Platform Plug-in Developer Guide
+providerName=Object Technology International, Inc.
