--- a/bundles/org.eclipse.jdt.doc.isv/plugin.xml
+++ b/bundles/org.eclipse.jdt.doc.isv/plugin.xml
@@ -9,7 +9,7 @@
    name = "%pluginName"
    id = "org.eclipse.jdt.doc.isv"
    version = "1.9.0"
-   provider-name = "Object Technology International, Inc.">
+   provider-name = "%providerName">
 
 
 <!-- ============================================================================= -->
