--- a/org.eclipse.jdt/about.properties
+++ b/org.eclipse.jdt/about.properties
@@ -4,7 +4,7 @@
 # fill-ins are supplied by about.mappings
 # This file should be translated.
 
-blurb=Eclipse Java Development Tooling\n\
+blurb=Eclipse Java Development Tools\n\
 \n\
 Version: 2.0\n\
 Build id: {0}\n\
