Remove "(JDT)" from name

--- a/org.eclipse.jdt-feature/feature.properties
+++ b/org.eclipse.jdt-feature/feature.properties
@@ -1,2 +1,2 @@
-featureName=Eclipse Java Development Tools (JDT)
+featureName=Eclipse Java Development Tools
 providerName=Object Technology International, Inc.
