--- a/org.eclipse.jdt/plugin.properties
+++ b/org.eclipse.jdt/plugin.properties
@@ -1,2 +1,2 @@
-pluginName=Eclipse Java Development Tools (JDT)
+pluginName=Eclipse Java Development Tools
 providerName=Object Technology International, Inc.
