--- a/org.eclipse.jdt/about.ini
+++ b/org.eclipse.jdt/about.ini
@@ -21,3 +21,7 @@ featureImage=eclipse32.gif
 
 # Property "welcomePage" contains path to welcome page (special XML-based format)
 welcomePage=welcome.xml
+
+# Property "welcomePerspective" contains the id of the perspective in which the
+# welcome page is to be opened.
+# optional
