--- a/org.eclipse.jdt.source-feature/feature.properties
+++ b/org.eclipse.jdt.source-feature/feature.properties
@@ -1,2 +1,2 @@
-featureName=Eclipse JDT Auxiliary Source Code
+featureName=Eclipse Java Development Tools SDK
 providerName=Object Technology International, Inc.
