--- a/org.eclipse.jdt.source/about.ini
+++ b/org.eclipse.jdt.source/about.ini
@@ -20,6 +20,10 @@ featureImage=eclipse32.gif
 # needed for primary features only
 
 # Property "welcomePage" contains path to welcome page (special XML-based format)
-# not needed for auxiliary source features
+# optional
+
+# Property "welcomePerspective" contains the id of the perspective in which the
+# welcome page is to be opened.
+# optional
 
 
