--- a/org.eclipse.jdt.source/plugin.properties
+++ b/org.eclipse.jdt.source/plugin.properties
@@ -1,2 +1,2 @@
-pluginName=Eclipse JDT Auxiliary Source Code
+pluginName=Eclipse Java Development Tools SDK
 providerName=Object Technology International, Inc.
