Add description element to feature.xml

--- a/oldfeatures/org.eclipse.platform-feature/feature.properties
+++ b/oldfeatures/org.eclipse.platform-feature/feature.properties
@@ -1,2 +1,3 @@
 featureName=Eclipse Platform
 providerName=Object Technology International, Inc.
+description=OS-independent base of the Eclipse Platform. (Binary runtime and user documentation.)
