Add description element to feature.xml

--- a/org.eclipse.jdt-feature/feature.properties
+++ b/org.eclipse.jdt-feature/feature.properties
@@ -1,2 +1,3 @@
 featureName=Eclipse Java Development Tools
 providerName=Object Technology International, Inc.
+description=Eclipse Java development tools. (Binary runtime and user documentation.)
