--- a/org.eclipse.jdt.source-feature/feature.properties
+++ b/org.eclipse.jdt.source-feature/feature.properties
@@ -1,2 +1,3 @@
 featureName=Eclipse Java Development Tools SDK
 providerName=Object Technology International, Inc.
+description=API documentation and source code zips for Java development tools.
