--- a/org.eclipse.jdt-feature/feature.properties
+++ b/org.eclipse.jdt-feature/feature.properties
@@ -1,3 +1,3 @@
 featureName=Eclipse Java Development Tools
-providerName=Object Technology International, Inc.
+providerName=Eclipse.org
 description=Eclipse Java development tools. (Binary runtime and user documentation.)
