--- a/oldfeatures/org.eclipse.platform-feature/feature.properties
+++ b/oldfeatures/org.eclipse.platform-feature/feature.properties
@@ -1,3 +1,3 @@
 featureName=Eclipse Platform
-providerName=Object Technology International, Inc.
+providerName=Eclipse.org
 description=OS-independent base of the Eclipse Platform. (Binary runtime and user documentation.)
