--- a/bundles/org.eclipse.jdt.doc.isv/build.xml
+++ b/bundles/org.eclipse.jdt.doc.isv/build.xml
@@ -25,7 +25,7 @@
 	<target name="gather.bin.parts" depends="init" if="destination">
 <zip zipfile="${basedir}/doc.zip"
 		basedir="${basedir}"
-		includes="book.css, hglegal.htm, ngibmcpy.gif, no_help_exists.htm, concepts/**, gettingStarted/**, images/**, reference/**, tasks/**,samples/**,guide/**"
+		includes="book.css, hglegal.htm, ngibmcpy.gif, no_help_exists.htm, concepts/**, gettingStarted/**, images/**, reference/**, tasks/**,samples/**,guide/**,questions/**"
 	/>
 		<mkdir dir="${destination}/${plugin}_${version}"/>
 		<copy todir="${destination}/${plugin}_${version}">
