--- a/org.eclipse.jdt.source/plugin.xml
+++ b/org.eclipse.jdt.source/plugin.xml
@@ -5,7 +5,7 @@
   version="2.0.0"
   provider-name="%providerName">
   
-  <extension point = "org.eclipse.pde.ui.source">
+  <extension point = "org.eclipse.pde.core.source">
      <location path="src" />
   </extension>
   
