*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.isv/plugin.xml
@@ -11,7 +11,11 @@
    version = "2.0.0"
    provider-name = "%providerName">
 
-
+<runtime>
+   <library name="activeHelpSample.jar">
+      <export name="*"/>
+   </library>
+</runtime>
 
 <!-- ============================================================================= -->
 <!-- Define primary TOC                                                            -->
