--- a/bundles/org.eclipse.platform.doc.isv/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.isv/plugin.xml
@@ -17,6 +17,12 @@
    </library>
 </runtime>
 
+<requires>
+   <import plugin="org.eclipse.help"/>
+   <import plugin="org.eclipse.ui"/>
+</requires>
+
+
 <!-- ============================================================================= -->
 <!-- Define primary TOC                                                            -->
 <!-- ============================================================================= -->
