*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.isv/plugin.xml
@@ -1,45 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<!-- ===================================================== -->
-<!-- Declare the documentation for the Platform ISV Guide  -->
-<!-- We will declare only one infoset (book)               -->
-<!-- ===================================================== -->
-
 <plugin
-   name = "%pluginName"
-   id = "org.eclipse.platform.doc.isv"
-   version = "2.0.0"
-   provider-name = "%providerName">
+   id="org.eclipse.platform.doc.isv"
+   name="%pluginName"
+   version="2.0.0"
+   provider-name="%providerName">
 
-<runtime>
-   <library name="activeHelpSample.jar">
-      <export name="*"/>
-   </library>
-</runtime>
-
-<requires>
-   <import plugin="org.eclipse.help"/>
-   <import plugin="org.eclipse.ui"/>
-</requires>
+   <runtime>
+      <library name="activeHelpSample.jar">
+         <export name="*"/>
+      </library>
+   </runtime>
+   <requires>
+      <import plugin="org.eclipse.help"/>
+      <import plugin="org.eclipse.ui"/>
+   </requires>
 
 
 <!-- ============================================================================= -->
 <!-- Define primary TOC                                                            -->
 <!-- ============================================================================= -->
-
-   <extension point="org.eclipse.help.toc">
-       <toc file="toc.xml" primary="true" />
+   <extension
+         point="org.eclipse.help.toc">
+      <toc
+            file="toc.xml"
+            primary="true">
+      </toc>
    </extension>
-
 <!-- ============================================================================= -->
 <!-- Define TOCs                                                                   -->
 <!-- ============================================================================= -->
-
-   <extension point="org.eclipse.help.toc">
-       <toc file="topics_Guide.xml" />
-       <toc file="topics_Reference.xml" />
-       <toc file="topics_Questions.xml" />
-       <toc file="topics_Samples.xml" />
+   <extension
+         point="org.eclipse.help.toc">
+      <toc
+            file="topics_Guide.xml">
+      </toc>
+      <toc
+            file="topics_Reference.xml">
+      </toc>
+      <toc
+            file="topics_Questions.xml">
+      </toc>
+      <toc
+            file="topics_Samples.xml">
+      </toc>
    </extension>
 
 </plugin>
