Separate update name name in feature.xml (bug 19423)

--- a/oldfeatures/org.eclipse.platform-feature/feature.properties
+++ b/oldfeatures/org.eclipse.platform-feature/feature.properties
@@ -1,3 +1,4 @@
 featureName=Eclipse Platform
 providerName=Eclipse.org
+updateSiteName=Eclipse.org update site
 description=Common OS-independent base of the Eclipse Platform. (Binary runtime and user documentation.)
