Change provider name to eclipse.org

--- a/bundles/org.eclipse.jdt.doc.isv/plugin.properties
+++ b/bundles/org.eclipse.jdt.doc.isv/plugin.properties
@@ -1,2 +1,2 @@
-pluginName = Eclipse JDT Plug-in Developer Guide
-providerName=Object Technology International, Inc.
+pluginName=Eclipse JDT Plug-in Developer Guide
+providerName=Eclipse.org
