--- a/bundles/org.eclipse.jdt.doc.user/plugin.properties
+++ b/bundles/org.eclipse.jdt.doc.user/plugin.properties
@@ -1,2 +1,2 @@
-pluginName = Java Development User Guide
-providerName=Object Technology International, Inc.
+pluginName=Eclipse Java Development User Guide
+providerName=Eclipse.org
