--- a/org.eclipse.jdt.source-feature/feature.properties
+++ b/org.eclipse.jdt.source-feature/feature.properties
@@ -1,3 +1,25 @@
+# features.properties
+# contains externalized strings for feature.xml
+# "%foo" in feature.xml corresponds to the key "foo" in this file
+# java.io.Properties file (ISO 8859-1 with "\" escapes)
+# This file should be translated.
+
+# "featureName" property - name of the feature
 featureName=Eclipse Java Development Tools SDK
+
+# "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
-description=API documentation and source code zips for Java development tools.
+
+# "updateSiteName" property - label for the update site
+updateSiteName=Eclipse.org update site
+
+# "description" property - description of the feature
+description=API documentation and source code zips for Eclipse Java development tools.
+
+# "license" property - text of the "Feature Update License"
+# should be plain text version of license agreement pointed to be "licenseURL"
+license=[Feature update license TBD]
+
+# "licenseURL" property - URL of the "Feature License"
+# do not translate value - just change to point to a locale-specific HTML page
+licenseURL=license.html
