--- a/bundles/org.eclipse.platform.doc.isv/build.xml
+++ b/bundles/org.eclipse.platform.doc.isv/build.xml
@@ -28,7 +28,7 @@
 			includes="book.css, hglegal.htm, ngibmcpy.gif, no_help_exists.htm, concepts/**, gettingStarted/**, images/**, reference/**, tasks/**,samples/**,guide/**,questions/**"
 		/>
 		<copy todir="${destination.temp.folder}/${full.name}">
-			<fileset dir="${basedir}" includes="*.properties,*.xml,*.zip,*.html,*.htm,*.gif,book.css" excludes="build.properties,build.xml,buildDoc.xml" />
+			<fileset dir="${basedir}" includes="*.properties,*.xml,*.zip,*.html,*.htm,*.gif,book.css,activeHelpSample.jar" excludes="build.properties,build.xml,buildDoc.xml" />
 		</copy>
 
 	</target>
