--- a/bundles/org.eclipse.sdk.tests/about.ini
+++ b/bundles/org.eclipse.sdk.tests/about.ini
@@ -22,3 +22,6 @@ featureImage=eclipse32.gif
 # Property "welcomePage" contains path to welcome page (special XML-based format)
 # optional
 
+# Property "welcomePerspective" contains the id of the perspective in which the
+# welcome page is to be opened.
+# optional
