--- a/bundles/org.eclipse.sdk.tests/about.properties
+++ b/bundles/org.eclipse.sdk.tests/about.properties
@@ -10,5 +10,5 @@ Version: 2.0\n\
 Build id: {0}\n\
 \n\
 (c) Copyright IBM Corp. and others 2000, 2002.  All rights reserved.\n\
-Visit http://www.eclipse.org
+Visit http://www.eclipse.org/eclipse
 
