Ensure that extra SDK features contribute their own source code zips

--- a/bundles/org.eclipse.sdk.tests/plugin.xml
+++ b/bundles/org.eclipse.sdk.tests/plugin.xml
@@ -4,4 +4,9 @@
    id="org.eclipse.sdk.tests"
    version="2.0.0"
    provider-name="%providerName">
+   
+  <extension point = "org.eclipse.pde.core.source">
+     <location path="src" />
+  </extension>
+  
 </plugin>
