--- a/bundles/org.eclipse.platform.doc.user/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.user/plugin.xml
@@ -50,6 +50,10 @@
    <extension point="org.eclipse.help.contexts"> 
       <contexts file="contexts_Search.xml" plugin="org.eclipse.search"/> 
    </extension>
+   
+	<extension point="org.eclipse.help.contexts"> 
+		<contexts file="contexts_Update.xml"  plugin="org.eclipse.update.ui"/> 
+	</extension>
 
 
 </plugin>
