fixed copy paste bug in comment

--- a/bundles/org.eclipse.jdt.doc.user/plugin.xml
+++ b/bundles/org.eclipse.jdt.doc.user/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!-- ===================================================== -->
-<!-- Declare the documentation for the Platform ISV Guide  -->
+<!-- Declare the documentation for the JDT User Guide  -->
 <!-- We will declare only one infoset (book)               -->
 <!-- ===================================================== -->
 
