--- a/org.eclipse.jdt/build.properties
+++ b/org.eclipse.jdt/build.properties
@@ -7,3 +7,8 @@ eclipse32.gif,\
 plugin.properties,\
 plugin.xml,\
 welcome.xml
+
+# note: the following files are intentionally not listed in bin.includes
+#    cpl-v10.html
+#    notice.html
+# these files need to end up as root files in <install>/eclipse/ for a jdt runtime platform build
