--- a/bundles/org.eclipse.sdk.examples/build.properties
+++ b/bundles/org.eclipse.sdk.examples/build.properties
@@ -6,3 +6,10 @@ about.properties,\
 eclipse32.gif,\
 plugin.xml,\
 plugin.properties
+
+# note: the following files are intentionally not listed in bin.includes
+#    cpl-v10.html
+#    notice.html
+# these files need to end up as root files in <install>/eclipse/ for a jdt runtime platform build
+
+
