--- a/bundles/org.eclipse.jdt.doc.user/build.xml
+++ b/bundles/org.eclipse.jdt.doc.user/build.xml
@@ -25,7 +25,7 @@
 		<mkdir dir="${destination.temp.folder}/${full.name}"/>
 		<zip zipfile="${destination.temp.folder}/${full.name}/doc.zip"
 			basedir="${basedir}"
-			includes="book.css, hglegal.htm, ngibmcpy.gif, concepts/**, gettingStarted/**, images/**, reference/**, tasks/**"
+			includes="book.css, hglegal.htm, ngibmcpy.gif, concepts/**, gettingStarted/**, images/**, reference/**, tasks/**, tips/** "
 		/>
 		<copy todir="${destination.temp.folder}/${full.name}">
 			<fileset dir="${basedir}" includes="*.properties,*.xml,*.zip,*.html,*.htm,*.gif,book.css" excludes="build.properties,build.xml"/>
