--- a/bundles/org.eclipse.jdt.doc.user/plugin.xml
+++ b/bundles/org.eclipse.jdt.doc.user/plugin.xml
@@ -27,6 +27,7 @@
 
    <extension point="org.eclipse.help.toc">
        <toc file="topics_GettingStarted.xml" />
+	   <toc file="topics_TipsTricks.xml" />
        <toc file="topics_Concepts.xml" />
        <toc file="topics_Tasks.xml" />
        <toc file="topics_Reference.xml" />
