External tools context ids

--- a/bundles/org.eclipse.platform.doc.user/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.user/plugin.xml
@@ -38,6 +38,10 @@
    <extension point="org.eclipse.help.contexts"> 
        <contexts file="contexts_Workbench.xml" plugin="org.eclipse.ui"/> 
    </extension>
+   
+   <extension point="org.eclipse.help.contexts">
+   		<contexts file="contexts_ExternalTools.xml" plugin="org.eclipse.ui.externaltools"/>
+   </extension>
 
    <extension point="org.eclipse.help.contexts"> 
        <contexts file="contexts_VCM.xml" plugin="org.eclipse.vcm.ui"/> 
