Adding JDT debugger contexts specifications

--- a/bundles/org.eclipse.jdt.doc.user/plugin.xml
+++ b/bundles/org.eclipse.jdt.doc.user/plugin.xml
@@ -45,5 +45,9 @@
 	<extension point="org.eclipse.help.contexts">
 		<contexts file="contexts_Debugger.xml" plugin="org.eclipse.debug.ui"/> 
 	</extension>
+	
+	<extension point="org.eclipse.help.contexts">
+		<contexts file="contexts_JDT_Debugger.xml" plugin="org.eclipse.jdt.debug.ui"/> 
+	</extension>
 
 </plugin>
