*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.user/plugin.xml
@@ -42,13 +42,13 @@
    <extension point="org.eclipse.help.contexts">
    		<contexts file="contexts_ExternalTools.xml" plugin="org.eclipse.ui.externaltools"/>
    </extension>
-
+   
    <extension point="org.eclipse.help.contexts"> 
-       <contexts file="contexts_VCM.xml" plugin="org.eclipse.vcm.ui"/> 
+       <contexts file="contexts_Team.xml" plugin="org.eclipse.team.ui"/> 
    </extension>
-
+   
    <extension point="org.eclipse.help.contexts"> 
-       <contexts file="contexts_VCM_CVS.xml" plugin="org.eclipse.vcm.ui.cvs"/> 
+       <contexts file="contexts_Team_CVS.xml" plugin="org.eclipse.team.cvs.ui"/> 
    </extension>
 
    <extension point="org.eclipse.help.contexts"> 
