What's New in 2.0 section

--- a/bundles/org.eclipse.platform.doc.user/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.user/plugin.xml
@@ -29,6 +29,7 @@
        <toc file="topics_Concepts.xml" />
        <toc file="topics_Tasks.xml" />
        <toc file="topics_Reference.xml" />
+       <toc file="topics_WhatsNew.xml" />       
    </extension>
 
 <!-- ============================================================================= -->
@@ -42,11 +43,11 @@
    <extension point="org.eclipse.help.contexts">
    		<contexts file="contexts_ExternalTools.xml" plugin="org.eclipse.ui.externaltools"/>
    </extension>
-   
+
    <extension point="org.eclipse.help.contexts"> 
        <contexts file="contexts_Team.xml" plugin="org.eclipse.team.ui"/> 
    </extension>
-   
+
    <extension point="org.eclipse.help.contexts"> 
        <contexts file="contexts_Team_CVS.xml" plugin="org.eclipse.team.cvs.ui"/> 
    </extension>
