--- a/bundles/org.eclipse.jdt.doc.isv/build.xml
+++ b/bundles/org.eclipse.jdt.doc.isv/build.xml
@@ -26,7 +26,7 @@
 		<mkdir dir="${destination.temp.folder}/${full.name}"/>
 		<zip zipfile="${destination.temp.folder}/${full.name}/doc.zip"
 			basedir="${basedir}"
-			includes="book.css, hglegal.htm, ngibmcpy.gif, no_help_exists.htm, concepts/**, gettingStarted/**, images/**, reference/**, tasks/**,samples/**,guide/**,questions/**"
+			includes="book.css, hglegal.htm, hglegal2002.htm, ngibmcpy.gif, ngibmcpy2002.gif, no_help_exists.htm, concepts/**, gettingStarted/**, images/**, reference/**, tasks/**,samples/**,guide/**,questions/**"
 		/>
 		<copy todir="${destination.temp.folder}/${full.name}">
 			<fileset dir="${basedir}" includes="*.properties,*.xml,*.zip,*.html,*.htm,*.gif,book.css" excludes="build.properties,build.xml,buildDoc.xml"/>
