--- a/bundles/org.eclipse.test/.project
+++ b/bundles/org.eclipse.test/.project
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.test.org</name>
+	<name>org.eclipse.test</name>
 	<comment></comment>
 	<projects>
 		<project>org.apache.ant</project>
+		<project>org.apache.xerces</project>
 		<project>org.eclipse.core.boot</project>
+		<project>org.eclipse.core.resources</project>
 		<project>org.eclipse.core.runtime</project>
 		<project>org.eclipse.swt</project>
 		<project>org.eclipse.ui</project>
