--- a/bundles/org.eclipse.test/plugin.xml
+++ b/bundles/org.eclipse.test/plugin.xml
@@ -8,11 +8,17 @@
 
 	<requires>
 	   <import plugin="org.apache.ant"/>
+  	   <import plugin="org.apache.xerces"/>
 	   <import plugin="org.junit"/>
 	   <import plugin="org.eclipse.ant.core" optional="true"/>
 	   <import plugin="org.eclipse.core.boot"/>
 	   <import plugin="org.eclipse.swt" optional="true"/>
-	   <import plugin="org.eclipse.ui" optional="true"/>
+	   <import plugin="org.eclipse.ui.workbench"/>
+	   <import plugin="org.eclipse.core.resources"/>
+      <import plugin="org.eclipse.update.core"/>
+      <import plugin="org.eclipse.help"/>
+      <import plugin="org.eclipse.jface"/>
+      <import plugin="org.eclipse.jface.text"/>
 	</requires> 
 
 	<runtime>
