--- a/bundles/org.eclipse.test/.project
+++ b/bundles/org.eclipse.test/.project
@@ -5,11 +5,16 @@
 	<projects>
 		<project>org.apache.ant</project>
 		<project>org.apache.xerces</project>
+		<project>org.eclipse.ant.core</project>
 		<project>org.eclipse.core.boot</project>
 		<project>org.eclipse.core.resources</project>
 		<project>org.eclipse.core.runtime</project>
+		<project>org.eclipse.help</project>
+		<project>org.eclipse.jface</project>
+		<project>org.eclipse.jface.text</project>
 		<project>org.eclipse.swt</project>
-		<project>org.eclipse.ui</project>
+		<project>org.eclipse.ui.workbench</project>
+		<project>org.eclipse.update.core</project>
 		<project>org.junit</project>
 	</projects>
 	<buildSpec>
