modified paths to be relative

--- a/bundles/org.eclipse.platform.doc.isv/build.xml
+++ b/bundles/org.eclipse.platform.doc.isv/build.xml
@@ -22,6 +22,7 @@
 	</target>
 
 	<target name="gather.bin.parts" depends="init" if="destination.temp.folder">
+		<ant antfile="buildDoc.xml" />
 		<mkdir dir="${destination.temp.folder}/${full.name}"/>
 		<zip zipfile="${destination.temp.folder}/${full.name}/doc.zip"
 			basedir="${basedir}"
@@ -33,10 +34,9 @@
 
 	</target>
 
-	<target name="build.jars" depends="init">
-		<ant antfile="buildDoc.xml" />
+	<target name="build.jars" depends="init" />
 	</target>
-
+	
 	<target name="gather.sources" depends="init" if="destination.temp.folder">
 	</target>
 
