--- a/bundles/org.eclipse.platform.doc.isv/build.xml
+++ b/bundles/org.eclipse.platform.doc.isv/build.xml
@@ -34,7 +34,7 @@
 
 	</target>
 
-	<target name="build.jars" depends="init" />
+	<target name="build.jars" depends="init" >
 	</target>
 	
 	<target name="gather.sources" depends="init" if="destination.temp.folder">
