Add RelEng nature and builder

--- a/maps/org.eclipse.releng/.project
+++ b/maps/org.eclipse.releng/.project
@@ -5,7 +5,13 @@
 	<projects>
 	</projects>
 	<buildSpec>
+		<buildCommand>
+			<name>org.eclipse.releng.tools.mapFileValidator</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>org.eclipse.releng.tools.relEngNature</nature>
 	</natures>
 </projectDescription>
