Add chkpii test

--- a/bundles/org.eclipse.releng.tests/build.properties
+++ b/bundles/org.eclipse.releng.tests/build.properties
@@ -1,6 +1,6 @@
-source.relengtests.jar = src/
-
 bin.includes = plugin.properties,\
                plugin.xml,\
-               *.xml
-            
+               *.xml,\
+               *.txt,\
+               *.exe
+source.relengtests.jar = src/
