updated blurb property to 2003 and changed url to jdt

--- a/org.eclipse.jdt.macosx/about.properties
+++ b/org.eclipse.jdt.macosx/about.properties
@@ -9,6 +9,6 @@ blurb=Eclipse Java Development Tools (Mac OS X)\n\
 Version: 2.1\n\
 Build id: {0}\n\
 \n\
-(c) Copyright IBM Corp. and others 2000, 2002.  All rights reserved.\n\
-Visit http://www.eclipse.org/eclipse
+(c) Copyright IBM Corp. and others 2000, 2003.  All rights reserved.\n\
+Visit http://www.eclipse.org/jdt
 
