--- a/bundles/org.eclipse.releng.tests/.project
+++ b/bundles/org.eclipse.releng.tests/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>org.eclipse.core.boot</project>
+		<project>org.eclipse.core.runtime</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
