--- a/bundles/org.eclipse.sdk.examples/about.properties
+++ b/bundles/org.eclipse.sdk.examples/about.properties
@@ -3,10 +3,12 @@
 # java.io.Properties file (ISO 8859-1 with "\" escapes)
 # fill-ins are supplied by about.mappings
 # This file should be translated.
+#
+# Do not translate any values surrounded by {}
 
 blurb=Eclipse SDK Examples\n\
 \n\
-Version: 2.1\n\
+Version: {featureVersion}\n\
 Build id: {0}\n\
 \n\
 (c) Copyright IBM Corp. and others 2000, 2003.  All rights reserved.\n\
