added context help file for Compare plugin

--- a/bundles/org.eclipse.platform.doc.user/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.user/plugin.xml
@@ -52,6 +52,10 @@
        <contexts file="contexts_Team_CVS.xml" plugin="org.eclipse.team.cvs.ui"/> 
    </extension>
 
+	<extension point="org.eclipse.help.contexts"> 
+		<contexts file="contexts_Compare.xml" plugin="org.eclipse.compare"/> 
+	</extension>
+   
    <extension point="org.eclipse.help.contexts"> 
       <contexts file="contexts_Search.xml" plugin="org.eclipse.search"/> 
    </extension>
