Changed as suggest in bug 31111

--- a/org.eclipse.jdt.source-feature/feature.properties
+++ b/org.eclipse.jdt.source-feature/feature.properties
@@ -5,7 +5,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Eclipse Java Development Tools SDK
+featureName=Eclipse JDT Plug-in Developer Resources
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
