--- a/bundles/org.eclipse.jdt.doc.user/about.properties
+++ b/bundles/org.eclipse.jdt.doc.user/about.properties
@@ -6,7 +6,7 @@
 
 blurb=Eclipse Java Development Tooling User Guide\n\
 \n\
-Version: 2.1\n\
+Version: {featureVersion}\n\
 Build id: {0}\n\
 \n\
 (c) Copyright IBM Corp. and others 2000, 2003.  All rights reserved.\n\
