--- a/bundles/org.eclipse.test/plugin.xml
+++ b/bundles/org.eclipse.test/plugin.xml
@@ -42,5 +42,9 @@
 			</run>
 		</application>
 	</extension>
+	
+    <extension point="org.eclipse.ant.core.extraClasspathEntries">
+      <extraClasspathEntry library="xalan.jar"/>
+    </extension>
 
 </plugin>
