--- a/org.eclipse.jdt/about.ini
+++ b/org.eclipse.jdt/about.ini
@@ -26,6 +26,6 @@ welcomePage=$nl$/welcome.xml
 # welcome page is to be opened.
 # optional
 
-# Property tipsAndTricksHref contains the Help topic href to a tips and tricks page 
+# Property "tipsAndTricksHref" contains the Help topic href to a tips and tricks page 
 # optional
-tipsAndTricksHref=/org.eclipse.jdt.doc.user/tips/tips-1.htm
+tipsAndTricksHref=/org.eclipse.jdt.doc.user/tips/jdt_tips.html
