Fixed F1 problems (see bug 34699 and 34661). Reviewed by Kai

--- a/bundles/org.eclipse.platform.doc.user/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.user/plugin.xml
@@ -39,6 +39,10 @@
    <extension point="org.eclipse.help.contexts"> 
        <contexts file="contexts_Workbench.xml" plugin="org.eclipse.ui"/> 
    </extension>
+
+   <extension point="org.eclipse.help.contexts"> 
+       <contexts file="contexts_Workbench.xml" plugin="org.eclipse.ui.workbench.texteditor"/> 
+   </extension>
    
    <extension point="org.eclipse.help.contexts">
    		<contexts file="contexts_ExternalTools.xml" plugin="org.eclipse.ui.externaltools"/>
