--- a/bundles/org.eclipse.jdt.doc.user/plugin.xml
+++ b/bundles/org.eclipse.jdt.doc.user/plugin.xml
@@ -50,4 +50,8 @@
 		<contexts file="contexts_JDT_Debugger.xml" plugin="org.eclipse.jdt.debug.ui"/> 
 	</extension>
 
+	<extension point="org.eclipse.help.contexts">
+		<contexts file="contexts_JDT_JUnit.xml" plugin="org.eclipse.jdt.junit"/> 
+	</extension>
+
 </plugin>
