--- a/bundles/org.eclipse.platform.doc.user/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.user/plugin.xml
@@ -28,6 +28,7 @@
        <toc file="topics_GettingStarted.xml" />
        <toc file="topics_Concepts.xml" />
        <toc file="topics_Tasks.xml" />
+       <toc file="topics_Tips.xml" />
        <toc file="topics_Reference.xml" />
        <toc file="topics_WhatsNew.xml" />       
    </extension>
