--- a/org.eclipse.jdt/about.ini
+++ b/org.eclipse.jdt/about.ini
@@ -16,7 +16,7 @@ featureImage=eclipse32.gif
 # Property "aboutImage" contains path to product image (500x330 or 115x164)
 # needed for primary features only
 
-# Property "appName" contains name of the application (translated)
+# Property "appName" contains name of the application (not translated)
 # needed for primary features only
 
 # Property "welcomePage" contains path to welcome page (special XML-based format)
