Bug 36870 - Separate the Ant UI from ExternalToolsUI

--- a/bundles/org.eclipse.platform.doc.user/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.user/plugin.xml
@@ -46,6 +46,10 @@
    <extension point="org.eclipse.help.contexts">
    		<contexts file="contexts_ExternalTools.xml" plugin="org.eclipse.ui.externaltools"/>
    </extension>
+   
+   <extension point="org.eclipse.help.contexts">
+   		<contexts file="contexts_ExternalTools.xml" plugin="org.eclipse.ant.ui"/>
+   </extension>
 
    <extension point="org.eclipse.help.contexts"> 
        <contexts file="contexts_Team.xml" plugin="org.eclipse.team.ui"/> 
