--- a/bundles/org.eclipse.jdt.doc.isv/build.xml
+++ b/bundles/org.eclipse.jdt.doc.isv/build.xml
@@ -9,7 +9,7 @@
 		<property name="temp.folder" value="${basedir}/temp.folder"/>
 		<property name="plugin.destination" value="${basedir}"/>
 		<property name="build.result.folder" value="${basedir}"/>
-		<available file="${destination.temp.folder}/${full.name}/doc.zip" property="doc.zip.present"/>
+		<available file="${basedir}/doc.zip" property="doc.zip.present"/>
 	</target>
 
 	<target name="build.update.jar" depends="init">
@@ -24,15 +24,15 @@
 	</target>
 
 	<target name="gather.bin.parts" depends="init" if="destination.temp.folder" unless="doc.zip.present">
-		<ant antfile="buildDoc.xml" />
+		<antcall target="buildDocZip" />
 		<mkdir dir="${destination.temp.folder}/${full.name}"/>
-		<zip zipfile="${destination.temp.folder}/${full.name}/doc.zip"
-			basedir="${basedir}"
-			includes="book.css, hglegal.htm, hglegal2002.htm, ngibmcpy.gif, ngibmcpy2002.gif, no_help_exists.htm, concepts/**, gettingStarted/**, images/**, reference/**, tasks/**,samples/**,guide/**,questions/**"
-		/>
 		<copy todir="${destination.temp.folder}/${full.name}">
 			<fileset dir="${basedir}" includes="*.properties,*.xml,*.zip,*.html,*.htm,*.gif,book.css" excludes="build.properties,build.xml,buildDoc.xml"/>
 		</copy>
+	</target>
+
+	<target name="buildDocZip" depends="init" unless="doc.zip.present">
+		<ant antfile="buildDoc.xml" />
 	</target>
 
 	<target name="build.jars" depends="init">
