*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/build.xml
+++ b/bundles/org.eclipse.jdt.doc.isv/build.xml
@@ -23,7 +23,7 @@
 		<delete dir="${temp.folder}"/>
 	</target>
 
-	<target name="gather.bin.parts" depends="init" if="destination.temp.folder" unless="doc.zip.present">
+	<target name="gather.bin.parts" depends="init" if="destination.temp.folder">
 		<antcall target="buildDocZip" />
 		<mkdir dir="${destination.temp.folder}/${full.name}"/>
 		<copy todir="${destination.temp.folder}/${full.name}">
