modifications for new PDE build mechanism

--- a/bundles/org.eclipse.sdk.examples/plugin.xml
+++ b/bundles/org.eclipse.sdk.examples/plugin.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin
-   name="%pluginName"
    id="org.eclipse.sdk.examples"
-   version="2.1.0"
+   name="%pluginName"
+   version="3.0.0"
    provider-name="%providerName">
+
+   <runtime>
+   </runtime>
+
 </plugin>
