*** empty log message ***

--- a/bundles/org.eclipse.releng.tests/build.properties
+++ b/bundles/org.eclipse.releng.tests/build.properties
@@ -12,5 +12,7 @@ bin.includes = plugin.properties,\
                plugin.xml,\
                *.xml,\
                *.txt,\
-               *.exe
+               *.exe,\
+               *.jar
+
 source.relengtests.jar = src/
