add execute permission to mac jnilib files

--- a/oldfeatures/org.eclipse.platform-feature/build.properties
+++ b/oldfeatures/org.eclipse.platform-feature/build.properties
@@ -22,4 +22,4 @@ root.linux.motif.x86.permissions.755=*.so*
 
 root.macosx.carbon.ppc=macosx.carbon,../../plugins/platform-launcher/bin/macosx
 root.macosx.carbon.ppc.link=Eclipse.app/Contents/MacOS/eclipse,eclipse
-root.macosx.carbon.ppc.permissions.755=Eclipse.app/Contents/MacOS/eclipse
+root.macosx.carbon.ppc.permissions.755=Eclipse.app/Contents/MacOS/eclipse,*.jnilib
