*** empty log message ***

--- a/oldfeatures/org.eclipse.platform-feature/build.properties
+++ b/oldfeatures/org.eclipse.platform-feature/build.properties
@@ -21,5 +21,5 @@ root.linux.motif.x86.link=libXm.so.2.1,libXm.so.2,libXm.so.2.1,libXm.so
 root.linux.motif.x86.permissions.755=*.so*
 
 root.macosx.carbon.ppc=macosx.carbon,../../plugins/platform-launcher/bin/macosx
-root.macosx.carbon.ppc.link=Eclipse.app/Contents/MacOS/eclipse,eclipse
+#root.macosx.carbon.ppc.link=Eclipse.app/Contents/MacOS/eclipse,eclipse
 root.macosx.carbon.ppc.permissions.755=Eclipse.app/Contents/MacOS/eclipse,*.jnilib
