add permission settings

--- a/oldfeatures/org.eclipse.platform-feature/build.properties
+++ b/oldfeatures/org.eclipse.platform-feature/build.properties
@@ -9,9 +9,16 @@ root=rootfiles,file:../../plugins/org.eclipse.platform/startup.jar
 root.permissions.755=eclipse
 
 root.win32.win32.x86=../../plugins/platform-launcher/bin/win32
+
 root.aix.motif.ppc=../../plugins/platform-launcher/bin/aix
+root.aix.motif.ppc.permissions.755=*.a
+
 root.hpux.motif.PA_RISC=../../plugins/platform-launcher/bin/hpux
+root.hpux.motif.PA_RISC.permissions.755=*.sl
+
 root.solaris.motif.sparc=../../plugins/platform-launcher/bin/solaris
+root.solaris.motif.sparc.permissions.755=*.so
+
 root.linux.gtk.x86=../../plugins/platform-launcher/bin/linux/gtk
 # Need to be fixed to reflect eventual change into feature.xml
 root.qnx.photon.x86=../../plugins/platform-launcher/bin/photon
