--- a/oldfeatures/org.eclipse.platform-feature/build.properties
+++ b/oldfeatures/org.eclipse.platform-feature/build.properties
@@ -11,13 +11,10 @@ root.permissions.755=eclipse
 root.win32.win32.x86=../../plugins/platform-launcher/bin/win32
 
 root.aix.motif.ppc=../../plugins/platform-launcher/bin/aix
-root.aix.motif.ppc.permissions.755=*.a
 
 root.hpux.motif.PA_RISC=../../plugins/platform-launcher/bin/hpux
-root.hpux.motif.PA_RISC.permissions.755=*.sl
 
 root.solaris.motif.sparc=../../plugins/platform-launcher/bin/solaris
-root.solaris.motif.sparc.permissions.755=*.so
 
 root.linux.gtk.x86=../../plugins/platform-launcher/bin/linux/gtk
 # Need to be fixed to reflect eventual change into feature.xml
@@ -29,4 +26,4 @@ root.linux.motif.x86.permissions.755=*.so*
 
 root.macosx.carbon.ppc=macosx.carbon,../../plugins/platform-launcher/bin/macosx
 root.macosx.carbon.ppc.link=Eclipse.app/Contents/MacOS/eclipse,eclipse
-root.macosx.carbon.ppc.permissions.755=Eclipse.app/Contents/MacOS/eclipse,*.jnilib
+root.macosx.carbon.ppc.permissions.755=Eclipse.app/Contents/MacOS/eclipse
