--- a/bundles/org.eclipse.platform.doc.user/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.user/plugin.xml
@@ -48,7 +48,7 @@
    </extension>
    
    <extension point="org.eclipse.help.contexts">
-   		<contexts file="contexts_ExternalTools.xml" plugin="org.eclipse.ant.ui"/>
+   		<contexts file="contexts_AntUI.xml" plugin="org.eclipse.ant.ui"/>
    </extension>
 
    <extension point="org.eclipse.help.contexts"> 
