--- a/bundles/org.eclipse.jdt.doc.user/build.xml
+++ b/bundles/org.eclipse.jdt.doc.user/build.xml
@@ -25,10 +25,10 @@
 		<mkdir dir="${destination.temp.folder}/${full.name}"/>
 		<zip zipfile="${destination.temp.folder}/${full.name}/doc.zip"
 			basedir="${basedir}"
-			includes="book.css, hglegal.htm, ngibmcpy.gif, concepts/**, gettingStarted/**, images/**, reference/**, tasks/**, tips/**, whatsNew/** "
+			includes="*.css, hglegal.htm, ngibmcpy.gif, concepts/**, gettingStarted/**, images/**, reference/**, tasks/**, tips/**, whatsNew/** "
 		/>
 		<copy todir="${destination.temp.folder}/${full.name}">
-			<fileset dir="${basedir}" includes="*.properties,*.xml,*.zip,*.html,*.htm,*.gif,book.css" excludes="build.properties,build.xml"/>
+			<fileset dir="${basedir}" includes="*.properties,*.xml,*.zip,*.html,*.htm,*.gif,*.css" excludes="build.properties,build.xml"/>
 		</copy>
 	</target>
 
