--- a/bundles/org.eclipse.test/.classpath
+++ b/bundles/org.eclipse.test/.classpath
@@ -2,7 +2,6 @@
 <classpath>
     <classpathentry kind="src" path="src"/>
     <classpathentry kind="src" path="/org.apache.ant"/>
-    <classpathentry kind="src" path="/org.apache.xerces"/>
     <classpathentry kind="src" path="/org.junit"/>
     <classpathentry kind="src" path="/org.eclipse.ant.core"/>
     <classpathentry kind="src" path="/org.eclipse.core.boot"/>
@@ -14,6 +13,6 @@
     <classpathentry kind="src" path="/org.eclipse.jface"/>
     <classpathentry kind="src" path="/org.eclipse.jface.text"/>
     <classpathentry kind="src" path="/org.eclipse.core.runtime"/>
-    <classpathentry kind="var" path="JRE_LIB" rootpath="JRE_SRCROOT" sourcepath="JRE_SRC"/>
+    <classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
