update plugin.xml to make 3.0 compliant

--- a/bundles/org.eclipse.test/plugin.xml
+++ b/bundles/org.eclipse.test/plugin.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?eclipse version="3.0"?>
 
 <plugin
 	name="%pluginName"
@@ -7,6 +8,10 @@
 	provider-name="%providerName">
 
 	<requires>
+	   <import plugin="org.eclipse.ui.ide" optional="true"/>
+	   <import plugin="org.eclipse.ui.views" optional="true"/>
+	   <import plugin="org.eclipse.ui.workbench.texteditor" optional="true"/>
+	   <import plugin="org.eclipse.ui.editors" optional="true"/>
 	   <import plugin="org.apache.ant"/>
   	   <import plugin="org.junit"/>
 	   <import plugin="org.eclipse.ant.core" optional="true"/>
