--- a/bundles/org.eclipse.platform.doc.user/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.user/plugin.xml
@@ -43,6 +43,10 @@
    <extension point="org.eclipse.help.contexts"> 
        <contexts file="contexts_Workbench.xml" plugin="org.eclipse.ui.workbench.texteditor"/> 
    </extension>
+
+   <extension point="org.eclipse.help.contexts"> 
+       <contexts file="contexts_Workbench.xml" plugin="org.eclipse.ui.editors"/> 
+   </extension>
    
    <extension point="org.eclipse.help.contexts">
    		<contexts file="contexts_ExternalTools.xml" plugin="org.eclipse.ui.externaltools"/>
