--- a/oldfeatures/org.eclipse.platform-feature/rootfiles/install.ini
+++ b/oldfeatures/org.eclipse.platform-feature/rootfiles/install.ini
@@ -8,7 +8,5 @@
 feature.default.id=org.eclipse.platform
 
 # Required property "feature.default.application" contains id of the core
-# application that gets control on startup. For products with a UI, this
-# is always org.eclipse.ui.ide.workbench; for "headless" products, this is
-# product-specific.
+# application that gets control on startup. The value is product-specific.
 feature.default.application=org.eclipse.ui.ide.workbench
