Add explanation and minimize set of required plug-ins

--- a/bundles/org.eclipse.platform.doc.isv/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.isv/plugin.xml
@@ -6,17 +6,15 @@
    version="3.0.0"
    provider-name="%providerName">
 
+<!-- ============================================================================= -->
+<!-- Small library containing a live help action used in doc                             -->
+<!-- ============================================================================= -->
    <runtime>
       <library name="activeHelpSample.jar">
          <export name="*"/>
       </library>
    </runtime>
    <requires>
-      <import plugin="org.eclipse.ui.ide" optional="true"/>
-      <import plugin="org.eclipse.ui.views" optional="true"/>
-      <import plugin="org.eclipse.jface.text" optional="true"/>
-      <import plugin="org.eclipse.ui.workbench.texteditor" optional="true"/>
-      <import plugin="org.eclipse.ui.editors" optional="true"/>
       <import plugin="org.eclipse.help"/>
       <import plugin="org.eclipse.ui"/>
    </requires>
