Add 3.0 porting guide

--- a/bundles/org.eclipse.platform.doc.isv/plugin.xml
+++ b/bundles/org.eclipse.platform.doc.isv/plugin.xml
@@ -42,6 +42,9 @@
             file="topics_Reference.xml">
       </toc>
       <toc
+            file="topics_Porting.xml">
+      </toc>
+      <toc
             file="topics_Questions.xml">
       </toc>
       <toc
