revert to previous revision due to bug #47110

--- a/bundles/org.eclipse.platform.doc.isv/build.xml
+++ b/bundles/org.eclipse.platform.doc.isv/build.xml
@@ -30,11 +30,11 @@
 		</copy>
 	</target>
 
-	<target name="buildDocZip" depends="init">
+	<target name="buildDocZip" depends="init" unless="doc.zip.present">
+		<ant antfile="buildDoc.xml" />
 	</target>
 
-	<target name="build.jars" depends="init" unless="doc.zip.present">
-		<ant antfile="buildDoc.xml" />
+	<target name="build.jars" depends="init" >
 	</target>
 	
 	<target name="gather.sources" depends="init" if="destination.temp.folder">
@@ -48,7 +48,6 @@
 
 	<target name="clean" depends="init">
 		<delete file="${plugin.destination}/${full.name}.jar"/>
-		<delete file="${plugin.destination}/${full.name}.zip"/>
 		<delete file="${plugin.destination}/${full.name}.zip"/>
 		<delete dir="${temp.folder}"/>
 	</target>
