--- a/bundles/org.eclipse.jdt.doc.isv/build.xml
+++ b/bundles/org.eclipse.jdt.doc.isv/build.xml
@@ -31,11 +31,11 @@
 		</copy>
 	</target>
 
-	<target name="buildDocZip" depends="init">
+	<target name="buildDocZip" depends="init" unless="doc.zip.present">
+		<ant antfile="buildDoc.xml" />
 	</target>
 
-	<target name="build.jars" depends="init" unless="doc.zip.present">
-		<ant antfile="buildDoc.xml" />
+	<target name="build.jars" depends="init">
 	</target>
 
 	<target name="gather.sources" depends="init" if="destination.temp.folder">
@@ -50,7 +50,6 @@
 	<target name="clean" depends="init">
 		<delete file="${plugin.destination}/${full.name}.jar"/>
 		<delete file="${plugin.destination}/${full.name}.zip"/>
-		<delete file="${plugin.destination}/doc.zip"/>
 		<delete dir="${temp.folder}"/>
 	</target>
 
