*** empty log message ***

--- a/maps/org.eclipse.releng/component.properties
+++ b/maps/org.eclipse.releng/component.properties
@@ -1,3 +1,5 @@
+#listing of map files owned by component teams
+
 platform-ant=ant.map
 
 platform-core=core.map,core-hpux.map,core-macosx.map,core-qnx.map,core-variables.map
